Star wars 5E :  - Fixing some conditionnal visibility overriden by roll20 css  - Fixing inspiration

--- a/StarWars5E/src/css/conditional-visibility.css
+++ b/StarWars5E/src/css/conditional-visibility.css
@@ -78,8 +78,8 @@ input[type=radio].tab-button:checked + span {
 
 .toggleflag[value*="advantagetoggle"] + .advantagetoggle,
 .toggleflag[value*="whispertoggle"] + .whispertoggle,
-.toggleflag[value="1"] + .hidden,
-.toggleflag[value="1"] + .sheet-row.hidden {
+.toggleflag[value="1"] + .conditional-visibility,
+.toggleflag[value="1"] + .sheet-row.conditional-visibility {
     display: block;
 }
 
@@ -118,8 +118,8 @@ input[type=radio].tab-button:checked + span {
     display: block;
 }
 
-.hidden,
-.options .sheet-row.hidden {
+.conditional-visibility,
+.options .sheet-row.conditional-visibility {
     display: none;
 }
 
